--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 body {
   font-family: Menlo;
   overflow: hidden;
+  background-image: url('./background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .scene,
